   app root and the Plone site root.  Run this BEFORE updating to 
   Plone 3-based opencore, version 0.13.  Do not run it under any other
   circumstances. For more info, see:
   https://svn.openplans.org/svn/opencore/trunk/docs/Plone2.5-Plone3-migration.txt
   (rob)

 * Peg all opencore dependencies to specific releases (slinkp)

 * Force project content delete to be done via POST; if it's a GET,
   redirect to a confirmation form. Fixes #2010. (slinkp)

 * Updated contact/wiki add tests to directly instantiate views (rmarianski)

 * Correct condition on summary page lists blank slate (rmarianski)

 * Textarea borders should be focused orange instead of lime (rmarianski)

 * Output error messages for Supervisord

0.12.0 (2008-07-11)
===================

 * New form for deleting accounts (not linked to from anywhere yet,
   you have to visit people/foo/delete) (slinkp) (trac feature #2223)

 * Zip file export view of project wiki pages (not linked to from
   anywhere yet, you have to visit projects/foo/project-pages-export.zip)
   (slinkp)

 * Fixed #2010: Project contents form should use POST, not GET (slinkp)

 * Email obfuscation for listen views (cabraham)

 * Rig in listen message_macros templates (rmarianski)

 * fix team AttributeError reported by user on summary page (rmarianski)

 * fix site_url AttributeError reported by user on password reset (rmarianski)

 * revert changes to login in current thread due to side effects (rmarianski)

 * reindex member project_ids when joining/leaving project (rmarianski)

 * lookup path to images dynamically to allow for overrides (rmarianski)

 * fix user reported UnboundLocalError on pending page (rmarianski)

 * possibly resolve user reported error on attachment delete (rmarianski)


0.11.2 (2008-05-27)
===================
 * Square member portrait thumbnails at (80,80) and (50,50) (rmarianski)
 * Square project logos at (80,80) and (50,50) (rmarianski)

0.11.1 (2008-05-20)
=================
